# pantheon

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
gpt2/: model.py  sample.py  tokenizer.py
src/pantheon/gpt2/: README.md  logs.txt  shapes.html
src/pantheon/gpt2/core/: attention.py  config.py  device.py  embed.py  layer_norm.py  loss.py  mlp.py  model.py  positional.py  sample.py  tokenize.py  train.py  transformer_block.py
src/pantheon/gpt2/data/: load.py  tokenize.py
src/pantheon/gpt2/instrumentation/: context.py  trainer.py
src/pantheon/gpt2/scripts/: infer.py  test_all_gpus.py  test_fsdp2.py  train.py
src/pantheon/gpt2_jax/: Attention.py  MLP.py  config.py  model.py  transformer_block.py
src/pantheon/gpt2_jax/core/: GPT2.py  attention.py  block.py  config.py  embed.py  layer_norm.py  mlp.py  model.py
src/pantheon/gpt2_jax/core_eqx/: attention.py  block.py  config.py  embed.py  layer_norm.py  model.py
src/pantheon/gpt2_jax/core_eqx/scripts/: infer.py
src/pantheon/gpt2_jax/data/: data.py  load.py  save.py  tokenizer.py
src/pantheon/gpt2_jax/scripts/: infer.py  train.py
src/pantheon/jax-practice/mnist/: train.py
src/pantheon/kernels/: intro.cpp  intro.cu
